Criação do db e da exception e mudanças na Userroute/swagger/server/UserController
